# cowriter

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  lint.sh  run.sh  setup.sh
backend/: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker_test.py  pyproject.toml  run.py  test_db.py  test_register.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  health.py  llm.py  text.py
backend/app/core/: config.py  security.py  settings.py
backend/app/db/: __init__.py  database.py  init_db.py
backend/app/models/: __init__.py  auth.py  custom_action.py  document.py  llm.py  text.py  user.py  user_preference.py
backend/app/services/: __init__.py  llm_manager.py  text_formatter.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_database.py  test_db_connection.py
backend/tests/api/: __init__.py
backend/tests/api/endpoints/: __init__.py  test_health.py  test_llm.py  test_text.py
backend/tests/services/: __init__.py  test_llm_manager.py  test_text_formatter.py
co_writer/: .env.example  .eslintrc.json  .prettierrc  jest.config.js  package-lock.json  package.json  tailwind.config.js
co_writer/src/__tests__/: README.md
co_writer/src/__tests__/components/: DocumentEditor.test.tsx
co_writer/src/app/: globals.css  layout.tsx  page.tsx
co_writer/src/components/: editor.tsx  theme-toggle.tsx
co_writer/src/hooks/: useCoWriterState.ts
co_writer/src/types/: index.ts
co_writer/src/utils/: api.ts  constants.ts  helpers.ts
cowriter/: .gitignore  LOCALSTORAGE_FIXES.md  next.config.ts  package-lock.json  package.json
cowriter/src/: middleware.ts
cowriter/src/__tests__/: README.md
cowriter/src/app/: globals.css  layout.tsx  page.tsx
cowriter/src/components/: editor.tsx  theme-provider.tsx
cowriter/src/hooks/: useCoWriterState.ts
cowriter/src/lib/: auth-context.tsx
cowriter/src/types/: index.ts
cowriter/src/utils/: api.ts  constants.ts  documentIcons.tsx  helpers.ts
(+30 files in other folders)
